Scons: Fix, when "clang" is in path on Windows, arch check crashed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,10 @@
     },
     "cSpell.words": [
         "__cplusplus",
+        "__warningregistry__",
+        "_Py_DecodeUTF8_surrogateescape",
         "_PyDict_NewPresized",
+        "_wtoi",
         "abiflags",
         "appdirs",
         "asyncgen",
@@ -107,6 +110,7 @@
         "CORO_SUSPENDED",
         "cpython",
         "ctypes",
+        "curexc_traceback",
         "Cython",
         "Dejong",
         "descrgetfunc",
@@ -129,6 +133,7 @@
         "hotfixes",
         "idna",
         "importlib",
+        "incbin",
         "inplace",
         "ipython",
         "isgenerator",
@@ -240,11 +245,7 @@
         "vmprof",
         "winlibs",
         "zstandard",
-        "zstd",
-        "_Py_DecodeUTF8_surrogateescape",
-        "curexc_traceback",
-        "_wtoi",
-        "__warningregistry__",
+        "zstd"
     ],
     "esbonio.server.enabled": true,
     "esbonio.sphinx.confDir": "",
