Quality: Check package configuration yaml with schema (#1594)
* Also moved the schema file to more general location, it's not
  Visual Code specific.

* Have a function to provide where the schema file lives.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -251,6 +251,6 @@
     "esbonio.sphinx.confDir": "",
     "cSpell.spellCheckOnlyWorkspaceFiles": true,
     "yaml.schemas": {
-        ".vscode/nuitka-package-config-schema.json": "standard.nuitka-package.config.yml"
+        "misc/nuitka-package-config-schema.json": "standard.nuitka-package.config.yml"
     }
 }
