Windows: Use UTF-8 encoding with forced outputs
* This matches what Python3.6+ does and roughly what older Python3 does.

* Otherwise default filesystem codec is used, that is not good enough.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -140,6 +140,8 @@
         "noinclude",
         "nosite",
         "Nuitka",
+        "__abstractmethods__",
+        "__newobj__",
         "numpy",
         "ob_sval",
         "onefile",
