Minor spelling cleanups

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,11 +78,15 @@
         "reportMissingImports": "none"
     },
     "cSpell.words": [
+        "__abstractmethods__",
         "__cplusplus",
+        "__newobj__",
         "__warningregistry__",
+        "_NUITKA_WINMAIN_ENTRY_POINT",
         "_Py_DecodeUTF8_surrogateescape",
         "_PyDict_NewPresized",
         "_wtoi",
+        "_XOPEN_SOURCE",
         "abiflags",
         "appdirs",
         "asyncgen",
@@ -149,6 +153,7 @@
         "lldb",
         "LPWSTR",
         "lxml",
+        "Matmult",
         "mdef",
         "metaclass",
         "METH_NOARGS",
@@ -163,8 +168,6 @@
         "noinclude",
         "nosite",
         "Nuitka",
-        "__abstractmethods__",
-        "__newobj__",
         "numpy",
         "ob_sval",
         "onefile",
@@ -233,8 +236,6 @@
         "traverseproc",
         "tshape",
         "ucrt",
-        "_NUITKA_WINMAIN_ENTRY_POINT",
-        "_XOPEN_SOURCE",
         "uncompiled",
         "unoptimized",
         "unorderable",
