UI: Minor cleanups
* Mostly spelling work, quoting a few things, and making some more
  readable.

* One options group was renamed to something more fitting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -163,6 +163,7 @@
         "Mult",
         "Namify",
         "NBOOL",
+        "no_docstrings",
         "noelf",
         "nofollow",
         "noinclude",
