Anti-bloat: Avoid matplotlib using "setuptools_scm"

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -396,6 +396,7 @@
       change_function:
         "_init_tests": "'None'"
         "test": "'None'"
+        "_get_version": "'(lambda : _version.version)'"
       replacements:
         '(root / ".git").exists()"': "'None'"
         "test.__test__ = False": ""
