Standalone: Fixup missing stdlib dependency on multiprocessing

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1305,6 +1305,12 @@
     depends:
       - "asyncio"
 
+- module-name: "concurrent.futures.process"
+  implicit-imports:
+    depends:
+      - "multiprocessing"
+      - "multiprocessing.connection"
+
 - module-name: "shelve"
   implicit-imports:
     depends:
