Standalone: Added more missing Plotly dependencies.

--- a/nuitka/plugins/standard/standard.nuitka-package.config.yml
+++ b/nuitka/plugins/standard/standard.nuitka-package.config.yml
@@ -1558,6 +1558,9 @@
       # Disable lazy loading implicit imports.
       - "plotly.validators.*"
       - "plotly.validators.*.*"
+      # Maybe misplaced those here. TODO: Also make recursive dependency a thing.
+      - "plotly.graph_objs.layout.*"
+      - "plotly.graph_objs.layout.*.*"
 
 - module-name: "tenacity"
   anti-bloat:
